added a gender form

--- a/index.html
+++ b/index.html
@@ -21,16 +21,11 @@
                                 <input type="date" id="inputdate" class="form-control" placeholder="date"
                                     required autofocus>
                             </div>
-                            <div class="row">
-                                <div class="col-sm-9 col-md-7 col-lg-5 mx-auto">
-                                    <div class="card card-signin my-5">
-                                        <div class="card-body">
-                                            <h5 class="card-title text-center">Gender</h5>
-                                            <form class="Gender">
-                                                <div class="form-label-group">
-                                                    <input type="gender" id="inputgender" class="form-control" placeholder="gender"
-                                                    required autofocus>
-                                                </div>
+                            <form action="">
+                                <input type="radio" name="gender" value="male"> Male<br>
+                                <input type="radio" name="gender" value="female"> Female<br>
+                                <input type="radio" name="gender" value="other"> Other
+                              </form>
                                                 <button class="btn btn-lg btn-primary btn-block text-uppercase" type="submit">Submit</button>
                                             </form>
                                         </div>
