--- a/index.html
+++ b/index.html
@@ -8,6 +8,9 @@
     <script type="text/javascript" src="bootstrap/js/bootstrap.js"></script>
     <script src="bootstrap/js/bootstrap.bundle.js"></script>
         <h2>AKAN</h2>
+        <p>
+            
+        </p>
 </head>
 <body class="bg">
     <div>
@@ -20,22 +23,19 @@
                             <div class="form-label-group">
                                 <input type="date" id="inputdate" class="form-control" placeholder="date"
                                     required autofocus>
-                            </div>
-                            <form action="">
-                                <input type="radio" name="gender" value="male"> Male<br>
-                                <input type="radio" name="gender" value="female"> Female<br>
-                                <input type="radio" name="gender" value="other"> Other
-                              </form>
-                                                <button class="btn btn-lg btn-primary btn-block text-uppercase" type="submit">Submit</button>
-                                            </form>
-                                        </div>
-                                    </div>
-                                </div>
+                                 </div>
+                                 <form action="">
+                                     <input type="radio" name="gender" value="male"> Male<br>
+                                     <input type="radio" name="gender" value="female"> Female<br>
+                                     <input type="radio" name="gender" value="other"> Other
+                                    </form>
+                                    <button class="btn btn-lg btn-primary btn-block text-uppercase" type="submit">Submit</button>
+                                </form>
                             </div>
                         </div>
+                    </div>
                 </div>
             </div>
         </div>
-    </div>
-</body>
-</html>
+    </body>>
+    </html>
