--- a/index.html
+++ b/index.html
@@ -33,10 +33,17 @@
                                     <button class="btn btn-lg btn-primary btn-block text-uppercase" type="submit">Submit</button>
                                 </form>
                             </div>
-                        </div>
-                    </div>
-                </div>
-            </div>
-        </div>
+                            <footer>
+                                <a href="#" class="fa fa-facebook"></a> 
+                                <a href="#" class="fa fa-instagram"></a> 
+                                <a href="#" class="fa fa-twitter"></a><br>
+                                &copy; Copyright 2020 Emmanuel Bett
+                            </footer>
+                        </body>
+                    </body>
+                </body>
+            </body>
+        </body>
     </body>
-    </html>
+</body>
+</html>
