--- a/index.html
+++ b/index.html
@@ -32,12 +32,12 @@
                                     <section>
                                         <form>
                                             <label>Year</label><br>
-                                            <input type="text" id="year" placeholder="Year born"><br>
+                                            <input type="text" id="year" placeholder="Year born" required><br>
                                             <div class="label">
                                                 <label>Month</label><br>
-                                                <input type="text" id="month" placeholder="Month born"><br>
+                                                <input type="text" id="month" placeholder="Month born" required><br>
                                                 <label>Day</label><br>
-                                                <input type="text" id="day" placeholder="Day born"><br>
+                                                <input type="text" id="day" placeholder="Day born" required><br>
                                                 <label>Gender</label><br>
                                                 <input type="radio" id="gender" name="gender" value="male">Male
                                                 <input type="radio" id="gender" name="gender" value="female">Female
