added facebook link

--- a/index.html
+++ b/index.html
@@ -46,11 +46,12 @@
                                         </form>
                                     </section>
                                     <footer>
-                                        <a href="#" class="fa fa-facebook"></a> 
+                                        <a href="https://www.facebook.com/" class="fa fa-facebook"></a> 
                                         <a href="#" class="fa fa-instagram"></a> 
                                         <a href="#" class="fa fa-twitter"></a><br>
                                         &copy; Copyright 2020 Emmanuel Bett
                                     </footer>
+                                    <script src="./js/script.js"></script>
                                 </body>
                              </body>
                         </body>
@@ -58,5 +59,5 @@
                 </body>
             </body>
         </body>
-    <script src="./js/script.js"></script>
+    </body>
 </html>
