--- a/index.html
+++ b/index.html
@@ -47,7 +47,7 @@
                                     </section>
                                     <footer>
                                         <a href="https://www.facebook.com/" class="fa fa-facebook"></a> 
-                                        <a href="#" class="fa fa-instagram"></a> 
+                                        <a href="https://www.instagram.com/?hl=en" class="fa fa-instagram"></a> 
                                         <a href="#" class="fa fa-twitter"></a><br>
                                         &copy; Copyright 2020 Emmanuel Bett
                                     </footer>
