--- a/index.html
+++ b/index.html
@@ -48,7 +48,7 @@
                                     <footer>
                                         <a href="https://www.facebook.com/" class="fa fa-facebook"></a> 
                                         <a href="https://www.instagram.com/?hl=en" class="fa fa-instagram"></a> 
-                                        <a href="#" class="fa fa-twitter"></a><br>
+                                        <a href="https://twitter.com/home" class="fa fa-twitter"></a><br>
                                         &copy; Copyright 2020 Emmanuel Bett
                                     </footer>
                                     <script src="./js/script.js"></script>
