added required atrribute on gender

--- a/index.html
+++ b/index.html
@@ -38,9 +38,9 @@
                                                 <label>Day</label><br>
                                                 <input type="text" id="day" placeholder="Day born" required><br>
                                                 <label>Gender</label><br>
-                                                <input type="radio" id="gender" name="gender" value="male">Male
-                                                <input type="radio" id="gender" name="gender" value="female">Female
-                                                <input type="radio" id="gender" name="gender" value="other">Other<br><br>
+                                                <input type="radio" id="gender" name="gender" value="male" required>Male
+                                                <input type="radio" id="gender" name="gender" value="female" required>Female
+                                                <input type="radio" id="gender" name="gender" value="other" required>Other<br><br>
                                                 <input type="submit" onclick="giveAkanName()" value="Submit">
                                             </div> 
                                         </form>
