--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
     <main>
         <h1><strong>AKAN</strong></h1>
         <p>
-            Akan names are derived from Ghanian culture. Frequently in Ghana, children are given their first name as a 'day name' which corresponds to the day in the week they were born. The application checks whether the date and month entered is valid and output to the user their Akan name depending on their gender. The application would finally match that with day name. Hence the output the user will see something like “Your Akan name is Kwasi” for example.
+            Akan names are derived from Ghanian culture. Frequently in Ghana, children are given their first name as a 'day name' which corresponds to the day in the week they were born. The application checks whether the date and month entered is valid and output to the user their Akan name depending on their gender. The application would finally match that with day name. Hence the output the user will see something like “You were born on Tuesday and your Akan name is Kwabena” for example.
         </p>
     </main>
     <body class="bg">
